tdf#131073 - Don't show hidden rows/cols after setting optimal row/col height

Change-Id: I1dbe92cfc577e3425787b942415182889cda6a76
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/139327
Tested-by: Jenkins
Reviewed-by: Heiko Tietze <heiko.tietze@documentfoundation.org>
Reviewed-by: Andreas Heinisch <andreas.heinisch@yahoo.de>